--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "sass:watch": "sass --watch src/styles/scss:src/styles/css",
-    "sass:build": "sass --update src/styles/scss:src/styles/css"
+    "sass": "sass --watch src/styles/scss:src/styles/css"
   }
 }
